--- a/training/chess-evolved-tmp.ini
+++ b/training/chess-evolved-tmp.ini
@@ -41,6 +41,6 @@ castling = false
 # promotionPieceTypesWhite = nbrq
 # promotionPieceTypesBlack = nbrq
 # startFen = rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR w KQkq - 0 1
-promotionPieceTypesWhite = OUTq
+promotionPieceTypesWhite = AIZq
 promotionPieceTypesBlack = aizq
-startFen = ziaqkaiz/eeeeeeee/8/8/8/8/WWWWWWWW/TUOQKOUT w - - 0 1
+startFen = ziaqkaiz/eeeeeeee/8/8/8/8/EEEEEEEE/ZIAQKAIZ w - - 0 1
