--- a/training/chess-evolved-tmp.ini
+++ b/training/chess-evolved-tmp.ini
@@ -41,6 +41,6 @@ castling = false
 # promotionPieceTypesWhite = nbrq
 # promotionPieceTypesBlack = nbrq
 # startFen = rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR w KQkq - 0 1
-promotionPieceTypesWhite = AIZq
-promotionPieceTypesBlack = aizq
-startFen = ziaqkaiz/eeeeeeee/8/8/8/8/EEEEEEEE/ZIAQKAIZ w - - 0 1
+promotionPieceTypesWhite = AUZq
+promotionPieceTypesBlack = auzq
+startFen = zuaqkauz/wwwwwwww/8/8/8/8/WWWWWWWW/ZUAQKAUZ w - - 0 1
